--- a/ComcastCRMGUIFramework/test-output/emailable-report.html
+++ b/ComcastCRMGUIFramework/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">64,821</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">263,920</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.comcast.crm.orgtest.CreateOrganisationTest</td><td><a href="#m0">confAfterSuite</a></td><td rowspan="1">1723299437061</td><td rowspan="1">2</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.comcast.crm.orgtest.CreateOrganisationTest</td><td><a href="#m1">createOrgTest</a></td><td rowspan="1">1723299386578</td><td rowspan="1">13486</td></tr><tr class="passedeven"><td><a href="#m2">createOrgWithIndAndType</a></td><td rowspan="1">1723299405430</td><td rowspan="1">12142</td></tr><tr class="passedeven"><td><a href="#m3">createOrgWithPhone</a></td><td rowspan="1">1723299422586</td><td rowspan="1">11972</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.comcast.crm.leadsTest.CreateLeadTest</td><td><a href="#m0">confAfterSuite</a></td><td rowspan="1">1723471030717</td><td rowspan="1">20660</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.comcast.crm.leadsTest.CreateLeadTest</td><td><a href="#m1">createLeadTest</a></td><td rowspan="1">1723470867186</td><td rowspan="1">138195</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.comcast.crm.orgtest.CreateOrganisationTest#confAfterSuite</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;java.sql.Connection.close()&quot; because &quot;this.con&quot; is null
+<h2>Default test</h2><h3 id="m0">com.comcast.crm.leadsTest.CreateLeadTest#confAfterSuite</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;java.sql.Connection.close()&quot; because &quot;this.con&quot; is null
 	at com.comcast.crm.generic.databaseutility.DataBaseUtility.closedbConnection(DataBaseUtility.java:33)
 	at com.comcast.crm.baseutility.BaseClass.confAfterSuite(BaseClass.java:50)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
@@ -34,8 +34,6 @@
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.comcast.crm.orgtest.CreateOrganisationTest#createOrgTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.comcast.crm.orgtest.CreateOrganisationTest#createOrgWithIndAndType</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.comcast.crm.orgtest.CreateOrganisationTest#createOrgWithPhone</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.comcast.crm.leadsTest.CreateLeadTest#createLeadTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
