--- a/ComcastCRMGUIFramework/test-output/index.html
+++ b/ComcastCRMGUIFramework/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\lenovo\AppData\Local\Temp\testng-eclipse--87557634\testng-customsuite.xml</span>
+                    <span>C:\Users\lenovo\AppData\Local\Temp\testng-eclipse-2014895174\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>2 groups</span>
+                    <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.comcast.crm.orgtest.CreateOrganisationTest" class="method navigator-link" hash-for-method="createOrgTest">createOrgTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.comcast.crm.orgtest.CreateOrganisationTest" class="method navigator-link" hash-for-method="createOrgWithIndAndType">createOrgWithIndAndType</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.comcast.crm.orgtest.CreateOrganisationTest" class="method navigator-link" hash-for-method="createOrgWithPhone">createOrgWithPhone</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.comcast.crm.leadsTest.CreateLeadTest" class="method navigator-link" hash-for-method="createLeadTest">createLeadTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,28 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.comcast.crm.orgtest.CreateOrganisationTest</span>
+              <span class="class-name">com.comcast.crm.leadsTest.CreateLeadTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createOrgTest">
-                  </a> <!-- createOrgTest -->
-                  <span class="method-name">createOrgTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createOrgWithIndAndType">
-                  </a> <!-- createOrgWithIndAndType -->
-                  <span class="method-name">createOrgWithIndAndType</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createOrgWithPhone">
-                  </a> <!-- createOrgWithPhone -->
-                  <span class="method-name">createOrgWithPhone</span>
+                  <a name="createLeadTest">
+                  </a> <!-- createLeadTest -->
+                  <span class="method-name">createLeadTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -160,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\lenovo\AppData\Local\Temp\testng-eclipse--87557634\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\lenovo\AppData\Local\Temp\testng-eclipse-2014895174\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -169,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.comcast.crm.orgtest.CreateOrganisationTest&quot;/&gt;
+      &lt;class name=&quot;com.comcast.crm.leadsTest.CreateLeadTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;createLeadTest&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- com.comcast.crm.leadsTest.CreateLeadTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -193,26 +173,6 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">regressionTest</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">createOrgWithIndAndType</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">createOrgWithPhone</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">smokeTest</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">createOrgTest</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -229,24 +189,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createOrgTest')
-data.setCell(0, 2, 'com.comcast.crm.orgtest.CreateOrganisationTest')
-data.setCell(0, 3, 13486);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'createOrgWithIndAndType')
-data.setCell(1, 2, 'com.comcast.crm.orgtest.CreateOrganisationTest')
-data.setCell(1, 3, 12142);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'createOrgWithPhone')
-data.setCell(2, 2, 'com.comcast.crm.orgtest.CreateOrganisationTest')
-data.setCell(2, 3, 11972);
+data.setCell(0, 1, 'createLeadTest')
+data.setCell(0, 2, 'com.comcast.crm.leadsTest.CreateLeadTest')
+data.setCell(0, 3, 138195);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 37 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -272,60 +224,36 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.comcast.crm.orgtest.CreateOrganisationTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.comcast.crm.leadsTest.CreateLeadTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">confBeforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">configBeforeclass</span>
-                <span class="method-start">93 ms</span>
+                <span class="method-start">24319 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">configBeforeMethod</span>
-                <span class="method-start">3634 ms</span>
+                <span class="method-start">78064 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">createOrgTest</span>
-                <span class="method-start">14420 ms</span>
+                <span class="method-name">createLeadTest</span>
+                <span class="method-start">124749 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">configAfterMethod</span>
-                <span class="method-start">27912 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">configBeforeMethod</span>
-                <span class="method-start">29921 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">createOrgWithIndAndType</span>
-                <span class="method-start">33272 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">configAfterMethod</span>
-                <span class="method-start">45417 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">configBeforeMethod</span>
-                <span class="method-start">47234 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">createOrgWithPhone</span>
-                <span class="method-start">50428 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">configAfterMethod</span>
-                <span class="method-start">62403 ms</span>
+                <span class="method-start">262953 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">configAfterclass</span>
-                <span class="method-start">64422 ms</span>
+                <span class="method-start">278304 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">confAfterSuite</span>
-                <span class="method-start">64903 ms</span>
+                <span class="method-start">288280 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
