--- a/ComcastCRMGUIFramework/test-output/old/Default suite/classes.html
+++ b/ComcastCRMGUIFramework/test-output/old/Default suite/classes.html
@@ -4,26 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.comcast.crm.orgtest.CreateOrganisationTest</td>
+<td>com.comcast.crm.leadsTest.CreateLeadTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createOrgWithPhone</td>
-<td>regressionTest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>createOrgWithIndAndType</td>
-<td>regressionTest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>createOrgTest</td>
-<td>smokeTest </td>
-</tr>
+<td>createLeadTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
