--- a/ComcastCRMGUIFramework/test-output/old/Default suite/methods-alphabetical.html
+++ b/ComcastCRMGUIFramework/test-output/old/Default suite/methods-alphabetical.html
@@ -1,30 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 19:47:17</td>   <td>0</td> <td title="&lt;&lt;BaseClass.confAfterSuite()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">&lt;&lt;confAfterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 19:46:12</td>   <td>-64893</td> <td title="&gt;&gt;BaseClass.confBeforeSuite()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">&gt;&gt;confBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 19:47:14</td>   <td>-2499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">&lt;&lt;configAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 19:47:14</td>   <td>-2499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">&lt;&lt;configAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 19:47:14</td>   <td>-2499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">&lt;&lt;configAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 19:47:16</td>   <td>-479</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterclass()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">&lt;&lt;configAfterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 19:46:59</td>   <td>-17669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">&gt;&gt;configBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 19:46:59</td>   <td>-17669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">&gt;&gt;configBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 19:46:59</td>   <td>-17669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">&gt;&gt;configBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 19:46:12</td>   <td>-64810</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeclass()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">&gt;&gt;configBeforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>24/08/10 19:46:26</td>   <td>-50483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganisationTest.createOrgTest()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">createOrgTest</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>24/08/10 19:46:45</td>   <td>-31631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganisationTest.createOrgWithIndAndType()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">createOrgWithIndAndType</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>24/08/10 19:47:02</td>   <td>-14475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganisationTest.createOrgWithPhone()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@33d512c1]">createOrgWithPhone</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="e4b4b2">  <td>24/08/12 19:27:10</td>   <td>0</td> <td title="&lt;&lt;BaseClass.confAfterSuite()[pri:0, instance:com.comcast.crm.leadsTest.CreateLeadTest@7c137fd5]">&lt;&lt;confAfterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663682701</td>   <td></td> </tr>
+<tr bgcolor="e4b4b2">  <td>24/08/12 19:22:22</td>   <td>-288269</td> <td title="&gt;&gt;BaseClass.confBeforeSuite()[pri:0, instance:com.comcast.crm.leadsTest.CreateLeadTest@7c137fd5]">&gt;&gt;confBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663682701</td>   <td></td> </tr>
+<tr bgcolor="e4b4b2">  <td>24/08/12 19:26:45</td>   <td>-25326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.comcast.crm.leadsTest.CreateLeadTest@7c137fd5]">&lt;&lt;configAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1663682701</td>   <td></td> </tr>
+<tr bgcolor="e4b4b2">  <td>24/08/12 19:27:00</td>   <td>-9975</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterclass()[pri:0, instance:com.comcast.crm.leadsTest.CreateLeadTest@7c137fd5]">&lt;&lt;configAfterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663682701</td>   <td></td> </tr>
+<tr bgcolor="e4b4b2">  <td>24/08/12 19:23:40</td>   <td>-210214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod()[pri:0, instance:com.comcast.crm.leadsTest.CreateLeadTest@7c137fd5]">&gt;&gt;configBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1663682701</td>   <td></td> </tr>
+<tr bgcolor="e4b4b2">  <td>24/08/12 19:22:46</td>   <td>-263956</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeclass()[pri:0, instance:com.comcast.crm.leadsTest.CreateLeadTest@7c137fd5]">&gt;&gt;configBeforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663682701</td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>24/08/12 19:24:27</td>   <td>-163531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateLeadTest.createLeadTest()[pri:0, instance:com.comcast.crm.leadsTest.CreateLeadTest@7c137fd5]">createLeadTest</td> 
+  <td>main@1663682701</td>   <td></td> </tr>
 </table>
