--- a/ComcastCRMGUIFramework/test-output/old/Suite/methods-not-run.html
+++ b/ComcastCRMGUIFramework/test-output/old/Suite/methods-not-run.html
@@ -1,8 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.comcast.crm.baseutility.BaseClass.confBeforeSuite</td></tr>
+<tr><td>com.comcast.crm.contacttest.CreateContactTest.createContactTest</td></tr>
 <tr><td>com.comcast.crm.contacttest.CreateContactTest.createContactWithOrg</td></tr>
-<tr><td>com.comcast.crm.orgtest.CreateOrganisationTest.createOrgWithIndAndType</td></tr>
 <tr><td>com.comcast.crm.contacttest.CreateContactTest.createContactSupportDateTest</td></tr>
-<tr><td>com.comcast.crm.orgtest.CreateOrganisationTest.createOrgWithPhone</td></tr>
-<tr><td>com.comcast.crm.baseutility.BaseClass.confAfterSuite</td></tr>
 </table>
