--- a/ComcastCRMGUIFramework/test-output/old/Suite/methods.html
+++ b/ComcastCRMGUIFramework/test-output/old/Suite/methods.html
@@ -1,28 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a287af">  <td>24/08/10 18:37:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeclass()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@557caf28]">&gt;&gt;configBeforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a287af">  <td>24/08/10 18:38:16</td>   <td>32241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@557caf28]">&lt;&lt;configAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a287af">  <td>24/08/10 18:38:18</td>   <td>34526</td> <td title="&lt;&lt;BaseClass.confAfterSuite()[pri:0, instance:com.comcast.crm.contacttest.CreateContactTest@3754a4bf]">&lt;&lt;confAfterSuite</td> 
+<tr bgcolor="9fa976">  <td>24/08/14 16:12:43</td>   <td>0</td> <td title="&gt;&gt;BaseClass.confBeforeSuite()[pri:0, instance:com.comcast.crm.contacttest.CreateContactTest@443118b0]">&gt;&gt;confBeforeSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>24/08/10 18:37:57</td>   <td>13785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganisationTest.createOrgTest()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@557caf28]">createOrgTest</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a287af">  <td>24/08/10 18:37:12</td>   <td>-31631</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeclass()[pri:0, instance:com.comcast.crm.contacttest.CreateContactTest@3754a4bf]">&gt;&gt;configBeforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a287af">  <td>24/08/10 18:38:17</td>   <td>34091</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterclass()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@557caf28]">&lt;&lt;configAfterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a287af">  <td>24/08/10 18:37:46</td>   <td>2235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod()[pri:0, instance:com.comcast.crm.orgtest.CreateOrganisationTest@557caf28]">&gt;&gt;configBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a287af">  <td>24/08/10 18:37:12</td>   <td>-31710</td> <td title="&gt;&gt;BaseClass.confBeforeSuite()[pri:0, instance:com.comcast.crm.contacttest.CreateContactTest@3754a4bf]">&gt;&gt;confBeforeSuite</td> 
+<tr bgcolor="9fa976">  <td>24/08/14 16:12:43</td>   <td>215</td> <td title="&lt;&lt;BaseClass.confAfterSuite()[pri:0, instance:com.comcast.crm.contacttest.CreateContactTest@443118b0]">&lt;&lt;confAfterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a287af">  <td>24/08/10 18:37:15</td>   <td>-28376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod()[pri:0, instance:com.comcast.crm.contacttest.CreateContactTest@3754a4bf]">&gt;&gt;configBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="d8c9b7">  <td>24/08/10 18:37:26</td>   <td>-16892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactTest()[pri:0, instance:com.comcast.crm.contacttest.CreateContactTest@3754a4bf]">createContactTest</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a287af">  <td>24/08/10 18:37:43</td>   <td>-662</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterclass()[pri:0, instance:com.comcast.crm.contacttest.CreateContactTest@3754a4bf]">&lt;&lt;configAfterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a287af">  <td>24/08/10 18:37:40</td>   <td>-2859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.comcast.crm.contacttest.CreateContactTest@3754a4bf]">&lt;&lt;configAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
